@@ -3,18 +3,18 @@ package org.prebid.server.optout;
 import io.netty.handler.codec.http.HttpHeaderValues;
 import io.vertx.core.Future;
 import io.vertx.core.MultiMap;
-import io.vertx.core.http.HttpHeaders;
 import io.vertx.core.json.DecodeException;
 import io.vertx.core.json.Json;
 import io.vertx.core.logging.Logger;
 import io.vertx.core.logging.LoggerFactory;
 import org.prebid.server.exception.PreBidException;
 import org.prebid.server.optout.model.RecaptchaResponse;
+import org.prebid.server.util.HttpUtil;
 import org.prebid.server.vertx.http.HttpClient;
 import org.prebid.server.vertx.http.model.HttpClientResponse;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 import java.util.Objects;
 
@@ -46,8 +46,8 @@ public class GoogleRecaptchaVerifier {
 
     private static MultiMap headers() {
         return MultiMap.caseInsensitiveMultiMap()
-                .add(HttpHeaders.CONTENT_TYPE, HttpHeaderValues.APPLICATION_X_WWW_FORM_URLENCODED)
-                .add(HttpHeaders.ACCEPT, HttpHeaderValues.APPLICATION_JSON);
+                .add(HttpUtil.CONTENT_TYPE_HEADER, HttpHeaderValues.APPLICATION_X_WWW_FORM_URLENCODED)
+                .add(HttpUtil.ACCEPT_HEADER, HttpHeaderValues.APPLICATION_JSON);
     }
 
     private static String encodedBody(String secret, String recaptcha) {
@@ -55,11 +55,7 @@ public class GoogleRecaptchaVerifier {
     }
 
     private static String encodeValue(String value) {
-        try {
-            return URLEncoder.encode(value, "utf-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new PreBidException(String.format("Cannot encode request form value: %s", value), e);
-        }
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 
     /**
